test_suite/tests/ui/key/string.stderr
error: use the serde rename attribute instead
 --> tests/ui/key/string.rs:5:19
  |
5 |     #[serde(key = "a")]
  |                   ^^^
